throw illegalStateException if selectedTseApplication doesn't exist